Refactoring part 3 - more unification of class names, use modern java
Signed-off-by: subhramit <subhramit.bb@live.in>